--- a/hugo.yaml
+++ b/hugo.yaml
@@ -14,6 +14,7 @@ params:
     disableFingerprinting: true
   defaultTheme: dark
   ShowCodeCopyButtons: true
+  math: true
       
 menu:
   main:
@@ -46,3 +47,18 @@ menu:
       url: experience/
       weight: 7
     
+markup:
+  goldmark:
+    extensions:
+      passthrough:
+        delimiters:
+          block:
+          - - \[
+            - \]
+          - - $$
+            - $$
+          inline:
+          - - \(
+            - \)
+        enable: true
+  
